# azure-ai-platform-engineering

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: azure_config.yaml
src/agents/: semantic_kernel_agent.py
src/document_intelligence/: document_intelligence_client.py
src/evaluation/: prompt_flow_evaluator.py
src/models/: azure_openai_client.py
src/pipelines/: azure_ml_pipeline.py
src/rag/: ai_search_client.py
src/safety/: content_safety_client.py
src/utils/: config.py  logging.py
tests/unit/: test_ai_search_client.py  test_azure_openai_client.py
