[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-ai-platform-engineering"
version = "1.0.0"
description = "Production-grade Azure AI Platform Engineering — OpenAI, AI Foundry, Semantic Kernel, AI Search, Content Safety, Prompt Flow, Azure ML"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ramy Amer" }]
requires-python = ">=3.12"

keywords = [
    "azure", "openai", "semantic-kernel", "ai-foundry", "prompt-flow",
    "azure-ml", "agents", "rag", "llm", "mlops", "content-safety"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Azure OpenAI + AI core
    "openai>=1.35.0",
    "azure-ai-inference>=1.0.0b3",

    # Azure SDK
    "azure-identity>=1.17.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-storage-blob>=12.21.0",

    # AI Search
    "azure-search-documents>=11.6.0b4",

    # Content Safety
    "azure-ai-contentsafety>=1.0.0",

    # Document Intelligence
    "azure-ai-documentintelligence>=1.0.0b4",

    # Azure ML + MLflow
    "azure-ai-ml>=1.17.0",
    "mlflow>=2.13.0",
    "azureml-mlflow>=1.57.0",

    # Semantic Kernel
    "semantic-kernel>=1.3.0",

    # Vector / Search
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",

    # Data processing
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",

    # Document handling
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    "pillow>=10.3.0",

    # ML
    "scikit-learn>=1.5.0",
    "shap>=0.45.0",

    # Utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",

    # Observability
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "azure-monitor-opentelemetry>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "respx>=0.21.0",
]

notebooks = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
]

[project.urls]
Repository = "https://github.com/romeosd/azure-ai-platform-engineering"
Documentation = "https://github.com/romeosd/azure-ai-platform-engineering/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*"]
